     router nodes forward to the same destination port.

   o added optional "SAVE" and "SAVE_ALL" button function to the MBSEQ_HW.V4 file

   o it's now possible to change the mixer map name.
     In the mixer page, press SELECT + GP16 button to enter the name editor.

   o LFO page: the current CC can be sent manually by pressing the GP14 button.


MIDIboxSEQ V4.075
~~~~~~~~~~~~~~~~~

   o MBHP_IIC_MIDI working properly again on a STM32 core (issue was caused by a compiler change)

   o Track event configuration page: if a parameter layer is configured for CC,
     Pitchbender or Program Change, it's now possible to send the event manually
     by pressing one of the GP buttons below the controller configuration (GP10, 11, 12, 13)

   o MIDI remote keyboard function now also deactivated when Note On with velocity 0 received


MIDIboxSEQ V4.074
~~~~~~~~~~~~~~~~~

   o "SD Card connected" message not displayed after boot anymore, instead only 
     when the SD Card is exchanged

   o whenever the ALL function is active, you can now directly select the steps
     which should be modified with the GP buttons (LEDs will show the selection pattern)

   o the ALL function has been enhanced:
     - press & hold the ALL button and move the encoder of the already selected step
       (marked with >...<) to change all steps to the same value (like before)

     - if ALL button not pushed (but active), move the encoder of the already selected step
       (marked with >...<) to change all step values relatively (like before)

     - NEW: if ALL button is active (regardless if pushed or not), and the encoder
       of an unselected step is moved, the editor will generate a ramp between the
       selected step and the moved encoder.
       This feature has been borrowed from Sequentix Cirklon - thanks for the inspiration! :-)

     The "selected step" can either be changed with the datawheel, or it will be
     changed if the ALL function isn't active (as before)

